--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ build/
 .gradle
 local.properties
 *.iml
+.android/local.properties
 
 # node.js
 #
@@ -51,3 +52,5 @@ buck-out/
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
+
+
