--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.0.0-alpha.6",
-    "react-native": "0.43.2"
+    "react-native": "0.43.2",
+    "react-native-datepicker": "^1.4.7"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
