--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.2",
+    "react-native-autocomplete-input": "^3.1.2",
     "react-native-datepicker": "^1.4.7",
     "react-native-loading-gif": "^1.1.3",
     "react-native-lock": "^0.6.0",
