--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.2",
     "react-native-datepicker": "^1.4.7",
-    "react-native-lock": "^0.6.0"
+    "react-native-lock": "^0.6.0",
+    "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
