--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.2",
     "react-native-datepicker": "^1.4.7",
+    "react-native-loading-gif": "^1.1.3",
     "react-native-lock": "^0.6.0",
+    "react-native-spinkit": "^1.0.2",
     "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
